crates/aranya-policy-compiler/tests/data/type_errors/match_pattern_wrong_type_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: string
  |
3 |         "foo" => {
  |         ^^^^^ expected `int` but found `string`
